# jira-cli

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
database/: Cargo.toml
database/src/: crud_tests.rs  db.rs  db_tests.rs  io_utils.rs  lib.rs  main.rs  models.rs  navigator.rs  navigators.rs
database/src/data/: db.json
database/src/db/: crud_tests.rs  db_tests.rs  models.rs
database/src/ui/: mod.rs  prompts.rs
database/src/ui/pages/: mod.rs  page_helpers.rs
