[package]
name = "jira-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ellipse = "0.2.0"
itertools = "0.13.0"
clearscreen = "3.0.0"

[dev-dependencies]
tempfile = "3.3.0"

[[bin]]
name = "database"
path = "src/main.rs"